parser.output
   0  $accept : %entry% $end

   1  program : class_decls decls EOF

   2  class_decls :
   3              | cdecl class_decls

   4  cdecl : modifier CLASS OBJECT LBRACE decls cons_list RBRACE

   5  cons : OBJECT LPAREN args_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   6  cons_list : cons
   7            | cons cons_list

   8  modifier : PRIVATE
   9           | PUBLIC
  10           | PROTECTED

  11  decls :
  12        | vdecl SEMI decls
  13        | fdecl decls

  14  vdecl_list :
  15             | vdecl SEMI vdecl_list

  16  vdecl : typ ID
  17        | typ LBRACK NUM RBRACK ID

  18  typ : primitive
  19      | obj

  20  obj : OBJECT

  21  primitive : INT
  22            | BOOL
  23            | STR

  24  fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

  25  formals_opt :
  26              | formals_list

  27  formals_list : vdecl
  28               | vdecl COMMA formals_list

  29  stmt_list :
  30            | stmt stmt_list

  31  stmt : expr SEMI
  32       | LBRACE stmt_list RBRACE
  33       | IF LPAREN expr RPAREN stmt ELSE stmt
  34       | WHILE LPAREN expr RPAREN stmt
  35       | FOR LPAREN expr SEMI expr SEMI expr RPAREN stmt
  36       | RETURN expr SEMI

  37  expr : NUM
  38       | BLIT
  39       | STRLIT
  40       | ID
  41       | expr PLUS expr
  42       | expr MINUS expr
  43       | expr TIMES expr
  44       | expr DIVIDE expr
  45       | expr MOD expr
  46       | expr EQ expr
  47       | expr NEQ expr
  48       | expr LESSER expr
  49       | expr LESSEREQ expr
  50       | expr GREATER expr
  51       | expr GREATEREQ expr
  52       | expr AND expr
  53       | expr OR expr
  54       | ID ASSIGN expr
  55       | ID LBRACK NUM RBRACK
  56       | LBRACK expr_list RBRACK
  57       | LPAREN expr RPAREN
  58       | ID LPAREN args_opt RPAREN
  59       | ID DOT ID LPAREN args_opt RPAREN
  60       | NEW OBJECT LPAREN args_opt RPAREN

  61  expr_list : expr
  62            | expr COMMA expr_list

  63  args_opt :
  64           | args

  65  args : expr
  66       | expr COMMA args

  67  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (67)
	class_decls : .  (2)

	PRIVATE  shift 3
	PUBLIC  shift 4
	PROTECTED  shift 5
	INT  reduce 2
	BOOL  reduce 2
	STR  reduce 2
	OBJECT  reduce 2
	EOF  reduce 2

	program  goto 6
	class_decls  goto 7
	cdecl  goto 8
	modifier  goto 9


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	modifier : PRIVATE .  (8)

	.  reduce 8


state 4
	modifier : PUBLIC .  (9)

	.  reduce 9


state 5
	modifier : PROTECTED .  (10)

	.  reduce 10


state 6
	%entry% : '\001' program .  (67)

	.  reduce 67


state 7
	program : class_decls . decls EOF  (1)
	decls : .  (11)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	OBJECT  shift 13
	EOF  reduce 11

	decls  goto 14
	vdecl  goto 15
	fdecl  goto 16
	typ  goto 17
	primitive  goto 18
	obj  goto 19


state 8
	class_decls : cdecl . class_decls  (3)
	class_decls : .  (2)

	PRIVATE  shift 3
	PUBLIC  shift 4
	PROTECTED  shift 5
	INT  reduce 2
	BOOL  reduce 2
	STR  reduce 2
	OBJECT  reduce 2
	EOF  reduce 2

	class_decls  goto 20
	cdecl  goto 8
	modifier  goto 9


state 9
	cdecl : modifier . CLASS OBJECT LBRACE decls cons_list RBRACE  (4)

	CLASS  shift 21
	.  error


state 10
	primitive : INT .  (21)

	.  reduce 21


state 11
	primitive : BOOL .  (22)

	.  reduce 22


state 12
	primitive : STR .  (23)

	.  reduce 23


state 13
	obj : OBJECT .  (20)

	.  reduce 20


state 14
	program : class_decls decls . EOF  (1)

	EOF  shift 22
	.  error


state 15
	decls : vdecl . SEMI decls  (12)
	fdecl : vdecl . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (24)

	SEMI  shift 23
	LPAREN  shift 24
	.  error


16: shift/reduce conflict (shift 13, reduce 11) on OBJECT
state 16
	decls : fdecl . decls  (13)
	decls : .  (11)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	OBJECT  shift 13
	EOF  reduce 11

	decls  goto 25
	vdecl  goto 15
	fdecl  goto 16
	typ  goto 17
	primitive  goto 18
	obj  goto 19


state 17
	vdecl : typ . ID  (16)
	vdecl : typ . LBRACK NUM RBRACK ID  (17)

	LBRACK  shift 26
	ID  shift 27
	.  error


state 18
	typ : primitive .  (18)

	.  reduce 18


state 19
	typ : obj .  (19)

	.  reduce 19


state 20
	class_decls : cdecl class_decls .  (3)

	.  reduce 3


state 21
	cdecl : modifier CLASS . OBJECT LBRACE decls cons_list RBRACE  (4)

	OBJECT  shift 28
	.  error


state 22
	program : class_decls decls EOF .  (1)

	.  reduce 1


23: shift/reduce conflict (shift 13, reduce 11) on OBJECT
state 23
	decls : vdecl SEMI . decls  (12)
	decls : .  (11)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	OBJECT  shift 13
	EOF  reduce 11

	decls  goto 29
	vdecl  goto 15
	fdecl  goto 16
	typ  goto 17
	primitive  goto 18
	obj  goto 19


state 24
	fdecl : vdecl LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (24)
	formals_opt : .  (25)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	OBJECT  shift 13
	RPAREN  reduce 25

	vdecl  goto 30
	typ  goto 17
	primitive  goto 18
	obj  goto 19
	formals_opt  goto 31
	formals_list  goto 32


state 25
	decls : fdecl decls .  (13)

	.  reduce 13


state 26
	vdecl : typ LBRACK . NUM RBRACK ID  (17)

	NUM  shift 33
	.  error


state 27
	vdecl : typ ID .  (16)

	.  reduce 16


state 28
	cdecl : modifier CLASS OBJECT . LBRACE decls cons_list RBRACE  (4)

	LBRACE  shift 34
	.  error


state 29
	decls : vdecl SEMI decls .  (12)

	.  reduce 12


state 30
	formals_list : vdecl .  (27)
	formals_list : vdecl . COMMA formals_list  (28)

	COMMA  shift 35
	RPAREN  reduce 27


state 31
	fdecl : vdecl LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (24)

	RPAREN  shift 36
	.  error


state 32
	formals_opt : formals_list .  (26)

	.  reduce 26


state 33
	vdecl : typ LBRACK NUM . RBRACK ID  (17)

	RBRACK  shift 37
	.  error


34: shift/reduce conflict (shift 13, reduce 11) on OBJECT
state 34
	cdecl : modifier CLASS OBJECT LBRACE . decls cons_list RBRACE  (4)
	decls : .  (11)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	OBJECT  shift 13

	decls  goto 38
	vdecl  goto 15
	fdecl  goto 16
	typ  goto 17
	primitive  goto 18
	obj  goto 19


state 35
	formals_list : vdecl COMMA . formals_list  (28)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	OBJECT  shift 13
	.  error

	vdecl  goto 30
	typ  goto 17
	primitive  goto 18
	obj  goto 19
	formals_list  goto 39


state 36
	fdecl : vdecl LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (24)

	LBRACE  shift 40
	.  error


state 37
	vdecl : typ LBRACK NUM RBRACK . ID  (17)

	ID  shift 41
	.  error


state 38
	cdecl : modifier CLASS OBJECT LBRACE decls . cons_list RBRACE  (4)

	OBJECT  shift 42
	.  error

	cons_list  goto 43
	cons  goto 44


state 39
	formals_list : vdecl COMMA formals_list .  (28)

	.  reduce 28


state 40
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (24)
	vdecl_list : .  (14)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	OBJECT  shift 13
	LPAREN  reduce 14
	LBRACE  reduce 14
	RBRACE  reduce 14
	LBRACK  reduce 14
	IF  reduce 14
	WHILE  reduce 14
	FOR  reduce 14
	RETURN  reduce 14
	NEW  reduce 14
	NUM  reduce 14
	BLIT  reduce 14
	STRLIT  reduce 14
	ID  reduce 14

	vdecl_list  goto 45
	vdecl  goto 46
	typ  goto 17
	primitive  goto 18
	obj  goto 19


state 41
	vdecl : typ LBRACK NUM RBRACK ID .  (17)

	.  reduce 17


state 42
	cons : OBJECT . LPAREN args_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	LPAREN  shift 47
	.  error


state 43
	cdecl : modifier CLASS OBJECT LBRACE decls cons_list . RBRACE  (4)

	RBRACE  shift 48
	.  error


state 44
	cons_list : cons .  (6)
	cons_list : cons . cons_list  (7)

	OBJECT  shift 42
	RBRACE  reduce 6

	cons_list  goto 49
	cons  goto 44


state 45
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (24)
	stmt_list : .  (29)

	LPAREN  shift 50
	LBRACE  shift 51
	LBRACK  shift 52
	IF  shift 53
	WHILE  shift 54
	FOR  shift 55
	RETURN  shift 56
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	RBRACE  reduce 29

	stmt_list  goto 62
	stmt  goto 63
	expr  goto 64


state 46
	vdecl_list : vdecl . SEMI vdecl_list  (15)

	SEMI  shift 65
	.  error


state 47
	cons : OBJECT LPAREN . args_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	args_opt : .  (63)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	RPAREN  reduce 63

	args_opt  goto 66
	expr  goto 67
	args  goto 68


state 48
	cdecl : modifier CLASS OBJECT LBRACE decls cons_list RBRACE .  (4)

	.  reduce 4


state 49
	cons_list : cons cons_list .  (7)

	.  reduce 7


state 50
	expr : LPAREN . expr RPAREN  (57)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 69


state 51
	stmt : LBRACE . stmt_list RBRACE  (32)
	stmt_list : .  (29)

	LPAREN  shift 50
	LBRACE  shift 51
	LBRACK  shift 52
	IF  shift 53
	WHILE  shift 54
	FOR  shift 55
	RETURN  shift 56
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	RBRACE  reduce 29

	stmt_list  goto 70
	stmt  goto 63
	expr  goto 64


state 52
	expr : LBRACK . expr_list RBRACK  (56)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 71
	expr_list  goto 72


state 53
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (33)

	LPAREN  shift 73
	.  error


state 54
	stmt : WHILE . LPAREN expr RPAREN stmt  (34)

	LPAREN  shift 74
	.  error


state 55
	stmt : FOR . LPAREN expr SEMI expr SEMI expr RPAREN stmt  (35)

	LPAREN  shift 75
	.  error


state 56
	stmt : RETURN . expr SEMI  (36)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 76


state 57
	expr : NEW . OBJECT LPAREN args_opt RPAREN  (60)

	OBJECT  shift 77
	.  error


state 58
	expr : NUM .  (37)

	.  reduce 37


state 59
	expr : BLIT .  (38)

	.  reduce 38


state 60
	expr : STRLIT .  (39)

	.  reduce 39


state 61
	expr : ID .  (40)
	expr : ID . ASSIGN expr  (54)
	expr : ID . LBRACK NUM RBRACK  (55)
	expr : ID . LPAREN args_opt RPAREN  (58)
	expr : ID . DOT ID LPAREN args_opt RPAREN  (59)

	LPAREN  shift 78
	LBRACK  shift 79
	ASSIGN  shift 80
	DOT  shift 81
	SEMI  reduce 40
	RPAREN  reduce 40
	RBRACK  reduce 40
	PLUS  reduce 40
	MINUS  reduce 40
	TIMES  reduce 40
	DIVIDE  reduce 40
	MOD  reduce 40
	EQ  reduce 40
	NEQ  reduce 40
	LESSER  reduce 40
	LESSEREQ  reduce 40
	GREATER  reduce 40
	GREATEREQ  reduce 40
	AND  reduce 40
	OR  reduce 40
	COMMA  reduce 40


state 62
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (24)

	RBRACE  shift 82
	.  error


state 63
	stmt_list : stmt . stmt_list  (30)
	stmt_list : .  (29)

	LPAREN  shift 50
	LBRACE  shift 51
	LBRACK  shift 52
	IF  shift 53
	WHILE  shift 54
	FOR  shift 55
	RETURN  shift 56
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	RBRACE  reduce 29

	stmt_list  goto 83
	stmt  goto 63
	expr  goto 64


state 64
	stmt : expr . SEMI  (31)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LESSER expr  (48)
	expr : expr . LESSEREQ expr  (49)
	expr : expr . GREATER expr  (50)
	expr : expr . GREATEREQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	SEMI  shift 84
	PLUS  shift 85
	MINUS  shift 86
	TIMES  shift 87
	DIVIDE  shift 88
	MOD  shift 89
	EQ  shift 90
	NEQ  shift 91
	LESSER  shift 92
	LESSEREQ  shift 93
	GREATER  shift 94
	GREATEREQ  shift 95
	AND  shift 96
	OR  shift 97
	.  error


state 65
	vdecl_list : vdecl SEMI . vdecl_list  (15)
	vdecl_list : .  (14)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	OBJECT  shift 13
	LPAREN  reduce 14
	LBRACE  reduce 14
	RBRACE  reduce 14
	LBRACK  reduce 14
	IF  reduce 14
	WHILE  reduce 14
	FOR  reduce 14
	RETURN  reduce 14
	NEW  reduce 14
	NUM  reduce 14
	BLIT  reduce 14
	STRLIT  reduce 14
	ID  reduce 14

	vdecl_list  goto 98
	vdecl  goto 46
	typ  goto 17
	primitive  goto 18
	obj  goto 19


state 66
	cons : OBJECT LPAREN args_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	RPAREN  shift 99
	.  error


state 67
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LESSER expr  (48)
	expr : expr . LESSEREQ expr  (49)
	expr : expr . GREATER expr  (50)
	expr : expr . GREATEREQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	args : expr .  (65)
	args : expr . COMMA args  (66)

	PLUS  shift 85
	MINUS  shift 86
	TIMES  shift 87
	DIVIDE  shift 88
	MOD  shift 89
	EQ  shift 90
	NEQ  shift 91
	LESSER  shift 92
	LESSEREQ  shift 93
	GREATER  shift 94
	GREATEREQ  shift 95
	AND  shift 96
	OR  shift 97
	COMMA  shift 100
	RPAREN  reduce 65


state 68
	args_opt : args .  (64)

	.  reduce 64


state 69
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LESSER expr  (48)
	expr : expr . LESSEREQ expr  (49)
	expr : expr . GREATER expr  (50)
	expr : expr . GREATEREQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	expr : LPAREN expr . RPAREN  (57)

	RPAREN  shift 101
	PLUS  shift 85
	MINUS  shift 86
	TIMES  shift 87
	DIVIDE  shift 88
	MOD  shift 89
	EQ  shift 90
	NEQ  shift 91
	LESSER  shift 92
	LESSEREQ  shift 93
	GREATER  shift 94
	GREATEREQ  shift 95
	AND  shift 96
	OR  shift 97
	.  error


state 70
	stmt : LBRACE stmt_list . RBRACE  (32)

	RBRACE  shift 102
	.  error


state 71
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LESSER expr  (48)
	expr : expr . LESSEREQ expr  (49)
	expr : expr . GREATER expr  (50)
	expr : expr . GREATEREQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	expr_list : expr .  (61)
	expr_list : expr . COMMA expr_list  (62)

	PLUS  shift 85
	MINUS  shift 86
	TIMES  shift 87
	DIVIDE  shift 88
	MOD  shift 89
	EQ  shift 90
	NEQ  shift 91
	LESSER  shift 92
	LESSEREQ  shift 93
	GREATER  shift 94
	GREATEREQ  shift 95
	AND  shift 96
	OR  shift 97
	COMMA  shift 103
	RBRACK  reduce 61


state 72
	expr : LBRACK expr_list . RBRACK  (56)

	RBRACK  shift 104
	.  error


state 73
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (33)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 105


state 74
	stmt : WHILE LPAREN . expr RPAREN stmt  (34)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 106


state 75
	stmt : FOR LPAREN . expr SEMI expr SEMI expr RPAREN stmt  (35)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 107


state 76
	stmt : RETURN expr . SEMI  (36)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LESSER expr  (48)
	expr : expr . LESSEREQ expr  (49)
	expr : expr . GREATER expr  (50)
	expr : expr . GREATEREQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	SEMI  shift 108
	PLUS  shift 85
	MINUS  shift 86
	TIMES  shift 87
	DIVIDE  shift 88
	MOD  shift 89
	EQ  shift 90
	NEQ  shift 91
	LESSER  shift 92
	LESSEREQ  shift 93
	GREATER  shift 94
	GREATEREQ  shift 95
	AND  shift 96
	OR  shift 97
	.  error


state 77
	expr : NEW OBJECT . LPAREN args_opt RPAREN  (60)

	LPAREN  shift 109
	.  error


state 78
	expr : ID LPAREN . args_opt RPAREN  (58)
	args_opt : .  (63)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	RPAREN  reduce 63

	args_opt  goto 110
	expr  goto 67
	args  goto 68


state 79
	expr : ID LBRACK . NUM RBRACK  (55)

	NUM  shift 111
	.  error


state 80
	expr : ID ASSIGN . expr  (54)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 112


state 81
	expr : ID DOT . ID LPAREN args_opt RPAREN  (59)

	ID  shift 113
	.  error


state 82
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (24)

	.  reduce 24


state 83
	stmt_list : stmt stmt_list .  (30)

	.  reduce 30


state 84
	stmt : expr SEMI .  (31)

	.  reduce 31


state 85
	expr : expr PLUS . expr  (41)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 114


state 86
	expr : expr MINUS . expr  (42)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 115


state 87
	expr : expr TIMES . expr  (43)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 116


state 88
	expr : expr DIVIDE . expr  (44)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 117


state 89
	expr : expr MOD . expr  (45)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 118


state 90
	expr : expr EQ . expr  (46)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 119


state 91
	expr : expr NEQ . expr  (47)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 120


state 92
	expr : expr LESSER . expr  (48)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 121


state 93
	expr : expr LESSEREQ . expr  (49)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 122


state 94
	expr : expr GREATER . expr  (50)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 123


state 95
	expr : expr GREATEREQ . expr  (51)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 124


state 96
	expr : expr AND . expr  (52)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 125


state 97
	expr : expr OR . expr  (53)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 126


state 98
	vdecl_list : vdecl SEMI vdecl_list .  (15)

	.  reduce 15


state 99
	cons : OBJECT LPAREN args_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (5)

	LBRACE  shift 127
	.  error


state 100
	args : expr COMMA . args  (66)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 67
	args  goto 128


state 101
	expr : LPAREN expr RPAREN .  (57)

	.  reduce 57


state 102
	stmt : LBRACE stmt_list RBRACE .  (32)

	.  reduce 32


state 103
	expr_list : expr COMMA . expr_list  (62)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	.  error

	expr  goto 71
	expr_list  goto 129


state 104
	expr : LBRACK expr_list RBRACK .  (56)

	.  reduce 56


state 105
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (33)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LESSER expr  (48)
	expr : expr . LESSEREQ expr  (49)
	expr : expr . GREATER expr  (50)
	expr : expr . GREATEREQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	RPAREN  shift 130
	PLUS  shift 85
	MINUS  shift 86
	TIMES  shift 87
	DIVIDE  shift 88
	MOD  shift 89
	EQ  shift 90
	NEQ  shift 91
	LESSER  shift 92
	LESSEREQ  shift 93
	GREATER  shift 94
	GREATEREQ  shift 95
	AND  shift 96
	OR  shift 97
	.  error


state 106
	stmt : WHILE LPAREN expr . RPAREN stmt  (34)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LESSER expr  (48)
	expr : expr . LESSEREQ expr  (49)
	expr : expr . GREATER expr  (50)
	expr : expr . GREATEREQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	RPAREN  shift 131
	PLUS  shift 85
	MINUS  shift 86
	TIMES  shift 87
	DIVIDE  shift 88
	MOD  shift 89
	EQ  shift 90
	NEQ  shift 91
	LESSER  shift 92
	LESSEREQ  shift 93
	GREATER  shift 94
	GREATEREQ  shift 95
	AND  shift 96
	OR  shift 97
	.  error


state 107
	stmt : FOR LPAREN expr . SEMI expr SEMI expr RPAREN stmt  (35)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LESSER expr  (48)
	expr : expr . LESSEREQ expr  (49)
	expr : expr . GREATER expr  (50)
	expr : expr . GREATEREQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	SEMI  shift 132
	PLUS  shift 85
	MINUS  shift 86
	TIMES  shift 87
	DIVIDE  shift 88
	MOD  shift 89
	EQ  shift 90
	NEQ  shift 91
	LESSER  shift 92
	LESSEREQ  shift 93
	GREATER  shift 94
	GREATEREQ  shift 95
	AND  shift 96
	OR  shift 97
	.  error


state 108
	stmt : RETURN expr SEMI .  (36)

	.  reduce 36


state 109
	expr : NEW OBJECT LPAREN . args_opt RPAREN  (60)
	args_opt : .  (63)

	LPAREN  shift 50
	LBRACK  shift 52
	NEW  shift 57
	NUM  shift 58
	BLIT  shift 59
	STRLIT  shift 60
	ID  shift 61
	RPAREN  reduce 63

	args_opt  goto 133
	expr  goto 67
	args  goto 68


state 110
	expr : ID LPAREN args_opt . RPAREN  (58)

	RPAREN  shift 134
	.  error


state 111
	expr : ID LBRACK NUM . RBRACK  (55)

	RBRACK  shift 135
	.  error


state 112
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LESSER expr  (48)
	expr : expr . LESSEREQ expr  (49)
	expr : expr . GREATER expr  (50)
	expr : expr . GREATEREQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)
	expr : ID ASSIGN expr .  (54)

	PLUS  shift 85
	MINUS  shift 86
	TIMES  shift 87
	DIVIDE  shift 88
	MOD  shift 89
	EQ  shift 90
	NEQ  shift 91
	LESSER  shift 92
	LESSEREQ  shift 93
	GREATER  shift 94
	GREATEREQ  shift 95
	AND  shift 96
	OR  shift 97
	SEMI  reduce 54
	RPAREN  reduce 54
	RBRACK  reduce 54
	COMMA  reduce 54


state 113
	expr : ID DOT ID . LPAREN args_opt RPAREN  (59)

	LPAREN  shift 136
	.  error


state 114
	expr : expr . PLUS expr  (41)
	expr : expr PLUS expr .  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIVIDE expr  (44)
	expr : expr . MOD expr  (45)
	expr : expr . EQ expr  (46)
	expr : expr . NEQ expr  (47)
	expr : expr . LESSER expr  (48)
	expr : expr . LESSEREQ expr  (49)
	expr : expr . GREATER expr  (50)
	expr : expr . GREATEREQ expr  (51)
	expr : expr . AND expr  (52)
	expr : expr . OR expr  (53)

	TIMES  shift 87
	DIVIDE  shift 88
	MOD  shift 89
	SEMI  reduce 41
	RPAREN  reduce 41
	RBRACK  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41
	EQ  reduce 41
	NEQ  reduce 41
	LESSER  reduce 41
	LESSEREQ  reduce 41
	GREATER  reduce 41
	GREATEREQ  reduce 41
	AND  reduce 41
	OR  reduce 41
	COMMA  reduce 41

